--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,10 @@
-<h1>Working!!!</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>???</title>
+</head>
+<body>
+<h1>Hello World!</h1>
+<script type="text/javascript" src="bundle.js"></script>
+</body>
+</html>
