--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>???</title>
+	<title>Javascript Starter Kit</title>
 </head>
 <body>
-<h1>Hello World!</h1>
+<h1>Hello World?</h1>
 <script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
