--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 	<title>Javascript Starter Kit</title>
 </head>
 <body>
-<h1>Hello World?</h1>
+<h1>Hello World!</h1>
 <script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
